<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory app:title="@string/read_mode">

        <ListPreference
            app:defaultValue="auto"
            app:entries="@array/app_mode_entries"
            app:entryValues="@array/app_mode_values"
            app:key="app_mode"
            app:title="@string/read_app"
            app:useSimpleSummaryProvider="true"
            />
<!--            app:useSimpleSummaryProvider="true" -->
        <SwitchPreferenceCompat
            app:dependency="is_android_8"
            app:key="read_mode"
            app:summaryOff="@string/android11_start"
            app:summaryOn="@string/android11_start"
            app:title="@string/app_mode" />
        <SwitchPreferenceCompat
            app:key="all_mode"
            app:summaryOff="@string/all_about_off"
            app:summaryOn="@string/all_about_on"
            app:title="全兼容模式" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_setting">

        <SwitchPreferenceCompat
            app:key="app_update"
            app:title="@string/app_update" />

        <SwitchPreferenceCompat
            app:key="sync"
            app:summaryOff="@string/no_tip"
            app:summaryOn="@string/no_tip"
            app:title="@string/no_tip_title"/>

        <!--        <SwitchPreferenceCompat-->
        <!--            app:key="save_user"-->
        <!--            tools:ignore="UseSwitchCompatOrMaterialXml"-->
        <!--            app:summaryOn="请不要在已获取Root权限或其他能够访问应用数据的设备打开,我们无法保证其安全性"-->
        <!--            app:summaryOff="请不要在已获取Root权限或其他能够访问应用数据的设备打开,我们无法保证其安全性"-->
        <!--            app:title="保留用户登录状态" />-->

    </PreferenceCategory>
    <SwitchPreferenceCompat
        app:isPreferenceVisible="false"
        app:key="is_android_8" />
</PreferenceScreen>